fix: text color for contrast of some text elements

--- a/blogs/blocks/post-cards/post-cards.css
+++ b/blogs/blocks/post-cards/post-cards.css
@@ -145,7 +145,7 @@ main .post-cards .post-cards-grid .post-card .card-author,
 main .post-cards .post-cards-grid .post-card .card-author a {
   display: inline;
   font-size: var(--body-font-size-s);
-  color: var(--color-gray-300);
+  color: var(--color-gray-400);
 }
 
  main .post-cards .post-cards-grid .post-card .card-read .icon {
